# fr

./: Dockerfile  MANIFEST.in  pyproject.toml
note/: LinearRegression.ipynb  LinearRegression.py  r1.ipynb  r1.py
src/fr/: cli.py  main.py  manager.py  model.pkl
