[project]
name = "fr"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "dMario24", email = "data.mario24@gmail.com"},
]
dependencies = [
    "scikit-learn>=1.5.1",
    "uvicorn[standard]>=0.30.6",
    "fastapi>=0.114.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
predict-fish = 'fr.cli:predict'

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]
note = [
    "notebook>=7.2.2",
    "matplotlib>=3.9.2",
]
